cif/org.eclipse.escet.cif.tests/tests/event_based/controllability_check/unsupported_req.err
ERROR: Failed to apply controllability check for CIF file "event_based/controllability_check/unsupported_req.cif".
CAUSE: CIF controllability check tool failed due to unsatisfied preconditions:

  ---------------------------------------------------------------------------------------
  (1/1) Automaton is a requirement automaton rather than a plant or supervisor automaton.
  ---------------------------------------------------------------------------------------
   * In the top-level scope of the specification:
     - requirement automaton r2:
                             ^
